--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "@vscode/codicons": "^0.0.33",
     "allotment": "^1.19.2",
     "antd": "^5.8.3",
     "classnames": "^2.3.2",
@@ -98,6 +97,8 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/vscode": "^1.82.0",
+    "@vscode/codicons": "^0.0.33",
     "@electron/notarize": "^2.1.0",
     "@electron/rebuild": "^3.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
@@ -105,6 +106,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/better-sqlite3": "^7.6.5",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
@@ -242,5 +244,7 @@
     ],
     "logLevel": "quiet"
   },
-  "eslintConfig": {"extends": "react-app"} 
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
